--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
   },
   "homepage": "https://github.com/day-glow/MVP#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "css-loader": "^5.0.0",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "path": "^0.12.7",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-materialize": "^3.9.3",
+    "style-loader": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
