--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MVP",
   "version": "1.0.0",
-  "description": "Motivation App",
+  "description": "MotivationMeNOW",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -30,6 +30,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-materialize": "^3.9.3",
+    "spotify-web-api-node": "^5.0.0",
     "style-loader": "^2.0.0"
   },
   "devDependencies": {
