--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0-rc.2",
+    "mysql2": "^2.2.5",
     "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-materialize": "^3.9.3",
+    "sequelize": "^6.3.5",
     "spotify-web-api-node": "^5.0.0",
     "style-loader": "^2.0.0"
   },
