--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-materialize": "^3.9.3",
+    "react-twitter-embed": "^3.0.3",
     "sequelize": "^6.3.5",
     "spotify-web-api-node": "^5.0.0",
     "style-loader": "^2.0.0"
